--- a/.github/workflows/github-workflow.yaml
+++ b/.github/workflows/github-workflow.yaml
@@ -6,16 +6,18 @@ on:
 
 jobs:
   deploy:
+    name: Deploy to EC2
     runs-on: ubuntu-latest
+    environment: automate  # 🔑 This must match your environment name in GitHub
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and Push Docker Image
@@ -23,7 +25,7 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/strapi-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/strapi-app:latest
 
-      - name: Setup Terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
@@ -34,3 +36,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+
