--- a/.github/workflows/github-workflow.yaml
+++ b/.github/workflows/github-workflow.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/strapi-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/strapi-app:latest ./my-strapi-app
           docker push ${{ secrets.DOCKER_USERNAME }}/strapi-app:latest
 
       - name: Set up Terraform
